updated HTML, CSS & JS

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 
 <!--Quiz Questions-->
-<section hidden id="question-quiz" class="hide">
+<section id="question-quiz" class="hide">
   <h1 id="question">Question</h1>
   <div id="multiple-choice" class="btn-grid">
       <button class="btn">Answer 1</button>
@@ -46,9 +46,9 @@
 
 <!--Final Result-->
 <div id="score-result" class="hide">
-  <br><h1>Highscore</h1>
- <br> <form id="submit-form">
-      <h3 id="user-score"></h3><br>
+  <br><h1>Final Score</h1>
+ <form id="submit-form">
+      <h3 id="user-score"></h3>
       <label id="user-initials"><strong>Enter Initials:</strong</label>
       <input type="text" id="initials-field" placeholder="    Enter Initials Here" />
       <br><br><button id="submit-button">Submit</button>
